# mbridge

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  setup.py
.github/workflows/: run-tests.yml
example/: 0.load_model_and_generate_single_gpu.py  1.load_model_and_export_single_gpu.py  2.load_model_and_export_multiple_gpus.py  3.launch_megatron_with_ray.py  4.launch_deepseekv3_with_ray.py  5.mfsdp_load_and_export_multiple_gpus.py
example/deepseek_v4/: test_dsv4_build.py
example/gemma3/: load_model_and_forward.py  load_model_and_inference.py  run_test.sh
example/glm4v/: _test_mrope_hf_vs_megatron.py  load_model_and_export.py  load_model_and_forward.py  load_model_and_inference.py  test_mrope_hf_vs_megatron.py
example/internvl3/: data_proc.py  load_model_and_forward.py  load_model_and_inference.py  run_test.sh
example/longcat_flash/: hf_fwd.py  launch_forward_with_ray.py  launch_with_ray.py  load_model_and_export.py  load_model_and_forward.py  load_model_and_inference.py  run_test_export_tp8pp4ep8.sh  run_test_forward_tp8pp4ep8.sh  run_test_inference_tp8pp4ep8.sh  run_test_launch_tp8pp4ep8.sh
example/mfsdp/: load_model_and_export.py  load_model_and_forward.py
example/qwen2_5_vl/: load_model_and_forward.py  run_test.sh
example/qwen3_5/: hf_fwd_moe.py  load_model_and_forward.py  load_model_and_inference.py  mpirun.sh  offline_calcul_cos.py  run_load_and_fwd.sh  run_test.sh  (+3 more)
mbridge/: __init__.py
memory_estimator/: README.md  app.py  estimate.py  estimate_013.py  run_webui.sh
scripts/: format.sh
tests/: test_deepseekv3_dequant_io.py
(+131 files in other folders)
