[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbridge"
version = "0.1.0"
authors = [
    { name = "Yan Bai", email = "bayan@nvidia.com" },
]
description = "A bridge between Hugging Face models and Megatron-Core"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "megatron-core>=0.12.0",
    "transformers",
    "safetensors",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mbridge", "mbridge*"] 